learn/to use self signed cert-cert manager/6.simple-tls-ingress-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: mydev
spec:
  entryPoints:
    - websecure
    #- web
  routes:
    - match: Host(`nginx.k3s.home`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
  tls:
    #certResolver: pebble
    secretName: nginx-test-cert
